app/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gatewaytest-argocd
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "payment-staging-experiment-api.bansira.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice-argo
spec:
  hosts:
  - "*"
  gateways:
  - gatewaytest-argocd
  http:
  - name: primary
    match:
    - uri:
        prefix: "/adi5"
    route:
    - destination:
        host: myapp
        port:
          number: 8080
  - name: canary
    match:
    - uri:
        prefix: "/adi5-canary"
    route:
    - destination:
        host: myapp-canary
        port:
          number: 8080
